samples/errors/state_expression_intersects_other.sara
exemple1 (input)(output) :=
  auto {
    state state1, state2  ;
    first state1 ;
    state1 : input)(output {
    }
    state2 : input)(true {
    }
  }
;
